--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,80 @@
 #navbarNavAltMarkup a:hover{
   color: red;
 }
+
+/* CSS Layanan */
+.layanan { 
+    width: 100%;
+    height: 313px;
+    border-radius: 5px;
+    padding: 40px;
+    box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.055);
+  
+    transition: all .3s ease-in;
+  
+  }
+  
+  .circle-icon {
+    width: 70px;
+    height: 70px;
+    background-color: var(--pr-color);
+    border-radius: 50%;
+    
+    transition: all .1s ease-in;
+  }
+  
+  .layanan h3 {
+    color: #000;
+    font-size: 24px;
+  
+    transition: all .2s ease-in;
+  
+  }
+  
+  .layanan p {
+    color: #000;
+    font-size: 14px;
+  
+    transition: all .3s ease-in;
+  
+  }
+  
+  .layanan:hover { 
+    width: 100%;
+    height: 313px;
+    background: linear-gradient( var(--pr-color), #FFF9EA);
+    border-radius: 5px;
+    padding: 40px;
+  
+    transition: all .3s ease-in;
+  
+    
+  }
+  
+  .layanan:hover h3 {
+    color: #000;
+    font-size: 24px;
+  
+    transition: all .2s ease-in;
+  
+  }
+  
+  .layanan:hover p {
+    color: #000;
+    font-size: 14px;
+  
+    transition: all .3s ease-in;
+  
+  }
+  
+  .layanan:hover .circle-icon img {
+    transform: scale(2);
+  }
+  
+  .layanan:hover .circle-icon {
+    background-color: #000;
+    transform: scale(1.1);
+  
+    transition: all .4s ease-in;
+  }
+  
