--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,36 @@
   .star{
     margin-top: 10px;
   }
+
+  .carousel-inner .card img {
+    width: auto;
+    height: auto;
+  }
+  
+  .container {
+    max-width: 80%;
+  }
+  
+  .card-title,
+  .card-text {
+    text-align: center;
+  }
+  
+  .card {
+    height: 280px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Mengganti warna ikon "Previous" */
+  .carousel-control-prev-icon {
+    width: 20px;
+    background-color: rgba(180, 160, 110, 0.5);
+  }
+  
+  /* Mengganti warna ikon "Next" */
+  .carousel-control-next-icon {
+    width: 20px;
+    background-color: rgba(180, 160, 110, 0.5);
+  }
+  
+  
