--- a/css/style.css
+++ b/css/style.css
@@ -139,4 +139,24 @@
     background-color: rgba(180, 160, 110, 0.5);
   }
   
+  /* Our Team */
+  .social-link {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000000;
+    border-radius: 50%;
+    transition: all 0.3s;
+    font-size: 0.9rem;
+}
+
+.social-link:hover, .social-link:focus {
+    background: aqua;
+    text-decoration: none;
+    color: #ff00e6;
+}
+
   
