--- a/css/layanan.css
+++ b/css/layanan.css
@@ -1,10 +1,28 @@
-.layanan:hover {
+.layanan {
+  position: relative;
+  /* contoh penerapan variabel lokal */
   width: 100%;
   height: 313px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.layanan::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
   background: #cdb988;
   border-radius: 5px;
-  padding: 40px;
-  transition: all 0.3s ease-in;
+  transition: height 0.3s ease-in;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.layanan:hover::before {
+  height: 100%;
 }
 
 /*# sourceMappingURL=layanan.css.map */
