add secondary color for accordion item

--- a/css/fungsi.css
+++ b/css/fungsi.css
@@ -3,4 +3,9 @@
   font-weight: bold;
 }
 
+.accordion-item {
+  background-color: #f4eddf;
+  font-weight: normal;
+}
+
 /*# sourceMappingURL=fungsi.css.map */
