--- a/scss/fungsi.scss
+++ b/scss/fungsi.scss
@@ -5,6 +5,12 @@
     @return map-get($map, $key);
 }
 
+
+@function changecolor-container($map, $key){
+    @return map-get($map, $key);
+}
+
+
 // melakukan deklarasi nilai variabel
 $warna:(
     "primary": #cdb988,
@@ -18,4 +24,16 @@ $warna:(
 .accordion-item {
     background-color: changecolor-accordionitem($warna, "secondary" );
     font-weight: normal;
+}
+
+#nama:focus{
+    background-color: changecolor-container($warna, "secondary");
+}
+
+#email:focus{
+    background-color: changecolor-container($warna, "secondary");
+}
+
+#pesan:focus{
+    background-color: changecolor-container($warna, "secondary");
 }
