Memindahkan fungsi modal

--- a/css/fungsi.css
+++ b/css/fungsi.css
@@ -20,4 +20,8 @@
   background-color: #f4eddf;
 }
 
+p.text-justify {
+  font-family: "montserrat" !important;
+}
+
 /*# sourceMappingURL=fungsi.css.map */
