memberi effect pada produk

--- a/css/fungsi.css
+++ b/css/fungsi.css
@@ -28,4 +28,8 @@ p.text-justify {
   border: 1px solid #cdb988; /* Border tipis berwarna hitam */
 }
 
+#produk-item:hover {
+  transform: scale(1.05); /* Efek zoom (1.05 untuk 105% zoom) */
+}
+
 /*# sourceMappingURL=fungsi.css.map */
