--- a/scss/layanan.scss
+++ b/scss/layanan.scss
@@ -1,13 +1,17 @@
+@import "style";
 // penerapan variabel variabel global
-$bg-color: #cdb988;
 $borrad: 5px;
 $position: relative;
 $tinggi-hover: 100%;
 $lebar-before: 100%;
 
-
+// Penerapan modul mixin
+@mixin style-card{
+  border: 2px solid $color;
+}
 
 .layanan {
+  @include style-card;
     position: $position;
     $lebar: 100%; /* contoh penerapan variabel lokal */
     $tinggi: 313px;
@@ -25,7 +29,7 @@ $lebar-before: 100%;
     left: 0;
     width: $lebar-before;
     height: 0;
-    background: $bg-color;
+    background: $primary-bg;
     border-radius: 5px;
     transition: height 0.3s ease-in;
     z-index: -1;
