add modul for navbar

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,3 +1,13 @@
 $primary-bg: #cdb988;
 $secondary-bg: #f4eddf;
 $color: #cdb988;
+
+// navigation bar
+$primary-color: #071952;
+$hover-color: #515a1f;
+$hover-bg: #cdb988;
+$bold-font: bold;
+
+// ukuran font
+$ukuranJudul: 18px;
+$ukuranParagraf: 13px;
