menambahkan modul di card produk dan testimoni

--- a/scss/layanan.scss
+++ b/scss/layanan.scss
@@ -40,3 +40,17 @@ $lebar-before: 100%;
     height: 100%;
   }
   
+//   @import "card"; 
+// .card {
+//     border: 1px solid #ccc;
+//     border-radius: 10px;
+//     padding: 15px;
+//     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+// } 
+
+// @import "card"; 
+
+// .testimoni-card {
+//     border: 2px solid #eeb681; 
+   
+//   }
