menambah dan mengubah isi file

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,5 +1,7 @@
-$primary-bg: #cdb988;
-$secondary-bg: #f4eddf;
+// $primary-bg: #cdb988;
+// $secondary-bg: #f4eddf;
+
+
 $color: #cdb988;
 
 // navigation bar
