mengubah color pada navbar

--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -5,9 +5,9 @@ body{
     background-color: $primary-bg;
 }
 
-#navbarNavAltMarkup a{
-    color: $primary-color;
-}
+// #navbarNavAltMarkup a{
+//     color: $primary-color;
+// }
 
 #navbarNavAltMarkup a:hover {
     color: $hover-color;
