menambahkan kondisi warna pada text

--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,13 @@ body {
   text-decoration: none;
   color: #ff00e6;
 }
+
+/* .text-1 {
+  font-size: 20px;
+  color: red;
+}
+
+.text-2 {
+  font-size: 20px;
+  color: blue;
+} */
