--- a/scss/perulangan.scss
+++ b/scss/perulangan.scss
@@ -15,6 +15,10 @@ $type:("small": 10px, "medium": 16px, "large": 32px);
     }
 }
 
+@import "style"; // ourteam
+
+$team-members: ("Fahri", "Rici", "Serly", "Bariza", "Widhiani");
+
 // kondisi untuk warna text
 // @mixin pop-up($size, $is-success: false) {
 //     font-size: $size;
