--- a/css/perulangan.css
+++ b/css/perulangan.css
@@ -18,6 +18,22 @@
   font-size: 32px;
 }
 
+.font-light {
+  font-weight: 200;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-bold {
+  font-weight: 800;
+}
+
 .team-member-Fahri {
   transition: background-color 0.3s ease-in-out;
 }
