--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,11 +1,13 @@
 @import "style"; 
 
-.card{
-    border-radius: $border-radius;
-    border: 2px solid $color;
-    padding: $padding;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+#testimoni {
+    .testimoni-card {
+      border: 2px solid #cdb988;
+      transition: transform 0.2s;
+  
+      
+    }
+  }
 
 .testimoni-card{
     border: 2px solid $color;
