update bagian faq

--- a/bootstrap-5.3.2/scss/_variables.scss
+++ b/bootstrap-5.3.2/scss/_variables.scss
@@ -318,7 +318,8 @@ $theme-colors: (
   "danger":     $danger,
   "light":      $light,
   "dark":       $dark,
-  "cream": #cdb988
+  "cream": #cdb988,
+  "cream2": #f4eddf
 ) !default;
 // scss-docs-end theme-colors-map
 
