--- a/scss/perulangan.scss
+++ b/scss/perulangan.scss
@@ -1,11 +1,11 @@
 @import "style";
-$colors-bg: ("primary": #cdb988, "secondary": #f4eddf);
+// $colors-bg: ("primary": #cdb988, "secondary": #f4eddf);
 
-@each $color-name, $color-bg in $colors-bg {
-    .background-#{$color-name} {
-        background-color: $color-bg;
-    }
-}
+// @each $color-name, $color-bg in $colors-bg {
+//     .background-#{$color-name} {
+//         background-color: $color-bg;
+//     }
+// }
 
 $type:("small": 10px, "medium": 16px, "large": 32px);
 
