menambahkan fitur back to top

--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,20 @@ body {
   margin-top: 10px;
 }
 
-/* .carousel-inner .card img {
-  width: auto;
-  height: auto;
-} */
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s;
+  cursor: pointer;
+}
+
+#btn-back-to-top.show {
+  opacity: 1;
+  pointer-events: auto;
+}
 
 .container {
   max-width: 80%;
@@ -119,7 +129,6 @@ body {
 }
 
 /* Our Team */
-
 
 /* .text-1 {
   font-size: 20px;
